# xq-rs

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .taplo.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  RELEASING.md  SPEC_DRIFT.md  book.toml  cliff.toml  clippy.toml  deny.toml  pyproject.toml
.cargo/: config.toml
.githooks/: commit-msg  pre-commit
conformance/: Cargo.toml  README.md  build.rs  opcodes.yaml
conformance/src/: lib.rs
conformance/tests/: python.rs  rust.rs
conformance/vectors/arithmetic/add_basic/: expected.json  inputs.json  program.xqasm  program.xqb
conformance/vectors/arithmetic/bitlen_negative/: expected.json  program.xqasm
conformance/vectors/arithmetic/bitlen_small/: expected.json  program.xqasm
conformance/vectors/arithmetic/mul_chain/: expected.json  inputs.json  program.xqasm  program.xqb
conformance/vectors/arithmetic/output_zero_vs_unset/: expected.json  inputs.json  program.xqasm  program.xqb
conformance/vectors/arithmetic/sub_wrap/: expected.json  inputs.json  program.xqasm  program.xqb
conformance/vectors/constraints/atleast_basic/: program.xqasm
conformance/vectors/constraints/atleast_boundary/: expected.json  program.xqasm
conformance/vectors/constraints/atleastw_basic/: expected.json  inputs.json  program.xqasm
conformance/vectors/constraints/atleastw_unit/: expected.json  program.xqasm
conformance/vectors/constraints/equality_additive/: expected.json  program.xqasm
conformance/vectors/constraints/equality_basic/: expected.json  program.xqasm
conformance/vectors/constraints/equality_weighted/: expected.json  program.xqasm
conformance/vectors/constraints/exclude_pair/: expected.json  program.xqasm  program.xqb
conformance/vectors/constraints/implies_chain/: expected.json  inputs.json  program.xqasm  program.xqb
conformance/vectors/constraints/onehotr_coeff/: expected.json  program.xqasm  program.xqb
conformance/vectors/constraints/reduce_basic/: expected.json  program.xqasm
conformance/vectors/constraints/reduce_chain/: expected.json  program.xqasm
conformance/vectors/control-flow/jumpi_not_taken/: program.xqasm  program.xqb
conformance/vectors/control-flow/jumpi_taken/: expected.json  inputs.json  program.xqasm
conformance/vectors/control-flow/range_negative_skip/: expected.json  inputs.json  program.xqasm
conformance/vectors/control-flow/range_sum/: expected.json  inputs.json  program.xqasm  program.xqb
conformance/vectors/control-flow/range_zero_skip/: expected.json  inputs.json  program.xqasm
conformance/vectors/energy/bqmx_linear/: program.xqasm  program.xqb
conformance/vectors/energy/bqmx_quadratic/: program.xqasm  program.xqb
conformance/vectors/energy/sqmx_nonzero_linear/: expected.json  program.xqasm  program.xqb
conformance/vectors/energy/sqmx_spin/: expected.json  program.xqasm  program.xqb
conformance/vectors/vector-ops/slack_append/: expected.json  program.xqasm
conformance/vectors/vector-ops/slack_basic/: expected.json  program.xqasm
conformance/vectors/vector-ops/slack_zero/: program.xqasm
conformance/vectors/xqmx-grid/sample_grid_ops/: expected.json  inputs.json  program.xqasm  program.xqb
conformance/vectors/xqmx-grid/sample_linear_ops/: expected.json  inputs.json  program.xqasm  program.xqb
crates/asm/: Cargo.toml
crates/asm/examples/: showcase.rs
crates/asm/src/: assembler.rs  ast.rs  error.rs  grammar.pest  lib.rs  parser.rs
crates/asm/tests/: integration.rs
crates/bytecode/: Cargo.toml
crates/bytecode/src/: builder.rs  codec.rs  error.rs  jump_table.rs  lib.rs  pool.rs  program.rs  stream.rs
crates/bytecode/src/types/: instruction.rs  mod.rs  opcode.rs  operand.rs  register_effect.rs  table.rs
crates/cli/: Cargo.toml
crates/cli/src/: asm.rs  dism.rs  main.rs  run.rs
crates/cli/tests/: cli.rs
crates/disasm/: Cargo.toml
crates/disasm/examples/: demo_disasm.rs
crates/disasm/src/: display.rs  lib.rs
crates/disasm/tests/: disasm.rs
crates/vm/: Cargo.toml
crates/vm/examples/: tsp.rs
crates/vm/examples/tsp/: decoder.xqasm  encoder.xqasm  main.rs  verifier.xqasm
crates/vm/src/: error.rs  lib.rs  model.rs  value.rs  vm.rs
crates/vm/src/tracer/: json.rs  mod.rs  text.rs
crates/vm/tests/: integration.rs  trace_json.rs  trace_text.rs
docs/: bytecode-semantics.md  bytecode-verification-report.md  python-api-walkthrough.md  xquad-development-workflow.md
spec/: README.md
xqapi/: Cargo.toml  pyproject.toml
xqapi/src/: asm.rs  lib.rs  vm.rs
xqasm/: Cargo.toml
xqasm/src/: assembler.rs  ast.rs  error.rs  grammar.pest  lib.rs  parser.rs
xqasm/tests/: integration.rs
xqcli/: Cargo.toml
xqcli/src/: asm.rs  dism.rs  main.rs  run.rs  verify.rs
xqcli/tests/: cli.rs
xqcp/: README.md  __init__.py  compiler.py  expression.py  problem.py  pyproject.toml  symbols.py
xqcp/tests/: __init__.py  test_xqcp.py
xqcp/tests/fixtures/maxcut/: verifier.xqasm
xqffi/: Cargo.toml  README.md  pyproject.toml
xqffi/src/: asm.rs  lib.rs  verifier.rs  vm.rs
xquad/: README.md  __init__.py  asm.py  cp.py  program.py  pyproject.toml  sa.py  types.py  verifier.py  vm.py
xquad/tests/: test_program.py  test_step_parity.py  test_umbrella.py
xqvm/: Cargo.toml  build.rs  opcodes.yaml
xqvm/examples/tsp/: main.rs  verifier.xqasm
xqvm/src/: disasm.rs  error.rs  lib.rs  model.rs  value.rs  verifier.rs  vm.rs
xqvm/src/bytecode/: builder.rs  codec.rs  error.rs  jump_table.rs  mod.rs  program.rs  stream.rs
xqvm/src/bytecode/types/: instruction.rs  mod.rs  opcode.rs  operand.rs  parity.rs  register_effect.rs  table.rs
xqvm/src/tracer/: json.rs  mod.rs  text.rs
xqvm/tests/: integration.rs  trace_json.rs  trace_text.rs
xqvm_py/: README.md  __init__.py  __main__.py  errors.py  executor.py  opcodes.py  program.py  pyproject.toml  state.py  tracer.py  vector.py  xqmx.py
xqvm_py/cli/: __init__.py  run.py
xqvm_py/tests/: __init__.py  conftest.py  test_executor.py  test_opcodes.py  test_opcodes_yaml.py  test_program.py  test_state.py  test_tracer.py  test_vector.py  test_xqmx.py
(+140 files in other folders)
