[workspace]
resolver = "3"
members = [
    "crates/bytecode",
    "crates/asm",
    "crates/disasm",
]

[workspace.package]
repository = "https://gitlab.com/piqued/quip-aglais"
license    = "AGPL-3.0-or-later"

[workspace.dependencies]
aglais-xqvm-asm      = { path = "./crates/asm" }
aglais-xqvm-bytecode = { path = "./crates/bytecode" }
aglais-xqvm-disasm   = { path = "./crates/disasm" }
clap                 = { version = "4", features = [ "derive" ] }
miette               = { version = "7", features = [ "fancy" ] }
pastey               = "0.2.1"
serde                = { version = "1", default-features = false }
thiserror            = "2"

[workspace.lints.clippy]
dbg-macro             = "warn"
index_refutable_slice = "warn"
manual-string-new     = "warn"
octal-escapes         = "allow"
redundant-clone       = "warn"
uninlined-format-args = "warn"
use-self              = "warn"

[workspace.lints.rust]
missing-docs          = "warn"
nonstandard-style     = "warn"
redundant-lifetimes   = "warn"
rust-2018-idioms      = "deny"
unreachable-pub       = "warn"
unused-extern-crates  = "warn"
unused-imports        = "warn"
unused-must-use       = "warn"
unused-qualifications = "warn"

[workspace.lints.rustdoc]
all = "warn"

[profile.release]
lto           = "thin"
codegen-units = 16

[profile.ci-test]
inherits         = "release"
opt-level        = 0
debug-assertions = true
overflow-checks  = true
lto              = false
codegen-units    = 256
