[workspace]
resolver = "3"
members = [
    "xqvm",
    "xqasm",
    "xqcli",
    "conformance",
    "xqffi",
]

[workspace.package]
repository = "https://gitlab.com/quip.network/xq-rs"
license    = "AGPL-3.0-or-later"

[workspace.dependencies]
### Workspace crates ###
xqvm  = { path = "./xqvm" }
xqasm = { path = "./xqasm" }

### Common dependencies ###
clap      = { version = "4", features = [ "derive" ] }
miette    = { version = "7", features = [ "fancy", "derive" ] }
pastey    = "0.2.1"
thiserror = { version = "2", default-features = false }

### Testing ###
assert_cmd = "2.2"
predicates = "3"

[workspace.lints.rust]
missing-docs          = "warn"
nonstandard-style     = "deny"
redundant-lifetimes   = "warn"
rust-2018-idioms      = "deny"
unreachable-pub       = "warn"
unsafe-code           = "deny"
unused-extern-crates  = "warn"
unused-imports        = "warn"
unused-must-use       = "deny"
unused-results        = "warn"
unused-qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Panic prevention
unwrap-used        = "deny"
expect-used        = "warn"
panic              = "warn"
panic-in-result-fn = "deny"
unimplemented      = "deny"
todo               = "deny"
indexing-slicing   = "warn"

# No cheating
allow-attributes                = "deny"
allow-attributes-without-reason = "deny"

# Code hygiene
dbg-macro             = "warn"
print-stdout          = "deny"
print-stderr          = "deny"
redundant-clone       = "warn"
uninlined-format-args = "warn"
manual-string-new     = "warn"
use-self              = "deny"

# Safety
await-holding-lock = "deny"
large-futures      = "deny"
exit               = "deny"
mem-forget         = "deny"

# Pedantic relaxations (too noisy)
module-name-repetitions = "allow"
similar-names           = "allow"
must-use-candidate      = "allow"

[workspace.lints.rustdoc]
all = "warn"

[profile.release]
lto           = "thin"
codegen-units = 16

[profile.ci-test]
inherits         = "release"
opt-level        = 0
debug-assertions = true
overflow-checks  = true
lto              = false
codegen-units    = 256
