[package]
name                 = "xquad-conformance"
description          = "Cross-implementation conformance harness for the XQVM toolchain"
version              = "0.1.0"
edition              = "2024"
license.workspace    = true
repository.workspace = true
publish              = false
build                = "build.rs"

[lints]
workspace = true

# --- Feature gates ----------------------------------------------------------
#
# The test harness runs vectors through two runtimes: the Rust `xqvm` crate
# (in-process) and the `xqvm_py` reference (`uv run python -m xqvm_py run`
# subprocess). Each runtime has its own test file gated by a feature so CI
# can parameterise:
#
#   cargo test -p xquad-conformance --no-default-features --features rust
#   cargo test -p xquad-conformance --no-default-features --features python
#
# Default enables both; local `cargo test` exercises the full matrix.

[features]
default = [ "rust", "python" ]
rust    = [  ]
python  = [  ]

# --- Dependencies -----------------------------------------------------------

[dependencies]
xqvm.workspace  = true
xqasm.workspace = true
serde           = { version = "1", features = [ "derive" ] }
serde_json      = "1"

[build-dependencies]
walkdir = "2"

[[bin]]
name = "conformance"
path = "src/bin/conformance.rs"
