[build-system]
requires      = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "xqcp"
description = "High-level constraint programming DSL compiling to XQVM assembly."
requires-python = ">=3.13"
license = { text = "AGPL-3.0-or-later" }
version = "0.1.0"
dependencies = [
    "xqvm_py",
    "xqapi_py",
]

[tool.uv.sources]
xqvm_py.workspace  = true
xqapi_py.workspace = true

[tool.hatch.build.targets.wheel]
packages = [ "." ]
exclude = [
    "tests/**",
    "pyproject.toml",
]

[tool.hatch.metadata]
# The package directory IS the project root; flat layout mirrors
# xqvm_py (see its pyproject.toml for the rationale).
allow-direct-references = true
