[package]
name                 = "xqffi"
description          = "PyO3 FFI bindings exposing xqvm + xqasm to Python; produces the `xqffi` Python extension"
version              = "0.1.0"
edition              = "2024"
license.workspace    = true
repository.workspace = true
publish              = false

[lints]
workspace = true

[lib]
name       = "xqffi"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
xqvm.workspace  = true
xqasm.workspace = true
pyo3            = { version = "0.28", features = [ "extension-module" ] }
