[build-system]
requires      = [ "maturin>=1.7,<2" ]
build-backend = "maturin"

[project]
name            = "xqffi"
description     = "PyO3 FFI bindings exposing the XQuad Rust runtime (xqvm + xqasm) to Python"
readme          = "README.md"
requires-python = ">=3.13"
license         = { text = "AGPL-3.0-or-later" }
dynamic         = [ "version" ]

[tool.maturin]
manifest-path = "Cargo.toml"
module-name   = "xqffi"
strip         = true
