[build-system]
requires      = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "xquad"
description = "Umbrella meta-package for the XQuad toolchain — re-exports xqffi, xqcp, xqsa under a unified namespace."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "AGPL-3.0-or-later" }
version = "0.1.0"
dependencies = [
    "xqffi",
    "xqcp",
    "xqsa",
    "xqvm_py",
]

[tool.uv.sources]
xqffi.workspace   = true
xqcp.workspace    = true
xqsa.workspace    = true
xqvm_py.workspace = true

[tool.hatch.build.targets.wheel]
packages = [ "." ]
exclude = [
    "tests/**",
    "pyproject.toml",
]

[tool.hatch.metadata]
# Flat layout: the package directory IS the project root, matching the
# rest of the workspace (xqvm_py / xqcp / xqsa).
allow-direct-references = true
