[package]
name                 = "xqvm"
description          = "X-Quadratic Virtual Machine — bytecode interpreter for the XQuad Toolchain"
version              = "0.1.0"
license.workspace    = true
repository.workspace = true
edition              = "2024"
build                = "build.rs"

[lints]
workspace = true

[features]
default = [ "std" ]
std = [
    "miette",
    "thiserror/std",
]

[dependencies]
pastey.workspace    = true
thiserror.workspace = true

# std-only optional dependencies
miette = { workspace = true, optional = true }

[dev-dependencies]
xqasm.workspace  = true
miette.workspace = true

[build-dependencies]
serde         = { version = "1", features = [ "derive" ] }
serde_yaml_ng = "0.10"
