[package]
name                 = "aglais-xqvm-asm"
description          = "Assembler for Aglais XQVM"
version              = "0.1.0"
license.workspace    = true
repository.workspace = true
edition              = "2024"

[lints]
workspace = true

[dependencies]
aglais-xqvm-bytecode = { workspace = true, features = [ "std" ] }
miette.workspace     = true
pest                 = "2"
pest_derive          = "2"
thiserror.workspace  = true
