[package]
name                 = "aglais-xqvm-bytecode"
description          = "Bytecode for Aglais XQVM"
version              = "0.1.0"
license.workspace    = true
repository.workspace = true
edition              = "2024"

[lints]
workspace = true

[features]
default = [ "std" ]
std     = [ "thiserror/std" ]

[dependencies]
pastey.workspace    = true
thiserror.workspace = true
