[package]
name                 = "aglais-xqvm-cli"
description          = "Unified CLI for the Aglais XQVM toolchain"
version              = "0.1.0"
license.workspace    = true
repository.workspace = true
edition              = "2024"

[lints]
workspace = true

[dependencies]
aglais-xqvm-asm      = { workspace = true }
aglais-xqvm-bytecode = { workspace = true, features = [ "std" ] }
aglais-xqvm-disasm   = { workspace = true }
aglais-xqvm-vm       = { workspace = true }
clap.workspace       = true
miette.workspace     = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

[[bin]]
name = "xq"
path = "src/main.rs"
