[package]
name                 = "aglais-xqvm-disasm"
description          = "Disassembler for Aglais XQVM"
version              = "0.1.0"
license.workspace    = true
repository.workspace = true
edition              = "2024"

[lints]
workspace = true

[dependencies]
aglais-xqvm-bytecode.workspace = true
clap.workspace                 = true
miette.workspace               = true
thiserror.workspace            = true

[[bin]]
name = "xqdism"
path = "src/bin/xqdism.rs"
