[package]
name                 = "aglais-xqvm-vm"
description          = "Interpreter for Aglais XQVM"
version              = "0.1.0"
license.workspace    = true
repository.workspace = true
edition              = "2024"

[lints]
workspace = true

[features]
default = [ "std" ]
std = [
    "aglais-xqvm-asm",
    "aglais-xqvm-bytecode/std",
    "aglais-xqvm-disasm",
    "miette",
    "thiserror/std",
]

[dependencies]
# Always available -- no_std-compatible.
# Direct path reference (not workspace) so we can set default-features = false
# independently from the workspace entry that other std-requiring crates use.
aglais-xqvm-bytecode = { path = "../bytecode", default-features = false }
pastey.workspace     = true
thiserror.workspace  = true

# std-only optional dependencies (activated by the `std` feature above)
aglais-xqvm-asm    = { workspace = true, optional = true }
aglais-xqvm-disasm = { workspace = true, optional = true }
miette             = { workspace = true, optional = true }
